@@ -25,7 +25,8 @@ sub process($$$) {
     my $feedback = $http_input->get('feedback');
     $feedback =~ s/\n/<BR>/g;
 
-    $http_response->generate_header(topic_title=>"Create new project",reload=>0, cache=>1);
+    $http_response->generate_header(topic_title=>"Create New Project",
+				    reload=>0, cache=>1);
 
     # Obtain a URL builder object.
     my $url_builder = Codestriker::Http::UrlBuilder->new($query);
