@@ -38,12 +38,14 @@ sub process($$$) {
 						   $show_comments_by_state,
 						   $show_comments_from_user);
 
-    # Display the data, with each topic title linked to the view topic screen.
-    $http_response->generate_header(topic=>$topicid, topic_title=>"Comment list", email=>$email, 
-                                    reload=>0, cache=>0);
-
     # Retrieve the appropriate topic details.           
     my $topic = Codestriker::Model::Topic->new($topicid);     
+
+    # Display the data, with each topic title linked to the view topic screen.
+    $http_response->generate_header(topic=>$topicid,
+				    topic_title=>"Topic Comments: $topic->{title}",
+				    email=>$email, 
+                                    reload=>0, cache=>0);
 
     # Create the hash for the template variables.
     my $vars = {};
