@@ -44,7 +44,7 @@ sub process($$$) {
     my @topic_comments = $topic->read_comments();
 
     $http_response->generate_header(topic=>$topic->{topicid},
-				    topic_title=>$topic->{document_title}, 
+				    topic_title=>"Topic Properties: $topic->{title}", 
 				    mode=>$mode, tabwidth=>$tabwidth,
 				    reload=>0, cache=>1);
 
